Compiladores/Compilador de mini Javascript Funcoes/y.output
Terminals unused in grammar

    ELSE
    WHILE
    FOR
    IGUAL
    _IGUAL


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMD CMDs
    3     | CMD

    4 CMD: ATRIB ';'
    5    | CMD_LET ';'
    6    | IF '(' E ')' CMD
    7    | BLOCO

    8 CMD_LET: LET DECLARACOES

    9 BLOCO: '{' CMDs '}'
   10      | BLOCOVAZIO

   11 DECLARACOES: DECLARACAO ',' DECLARACOES
   12            | DECLARACAO

   13 DECLARACAO: ID '=' E
   14           | ID
   15           | %empty

   16 ATRIB: LVALUEPROP '=' ATRIB
   17      | LVALUE '=' ATRIB
   18      | E

   19 LVALUE: ID

   20 LVALUEPROP: ATRIBUTOS

   21 ATRIBUTOS: '[' E ']' ATRIBUTOS
   22          | '.' ID ATRIBUTOS
   23          | '[' E ']'
   24          | '.' ID

   25 E: E '^' E
   26  | E '<' E
   27  | E '>' E
   28  | E MAIOR_IGUAL E
   29  | E MENOR_IGUAL E
   30  | E '*' E
   31  | E '+' E
   32  | E '-' E
   33  | E '/' E
   34  | E '%' E
   35  | F

   36 F: LVALUE
   37  | LVALUEPROP
   38  | NUM
   39  | STR
   40  | BLOCOVAZIO
   41  | '[' ']'
   42  | '(' E ')'

   43 BLOCOVAZIO: '{' '}'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 34
    '(' (40) 6 42
    ')' (41) 6 42
    '*' (42) 30
    '+' (43) 31
    ',' (44) 11
    '-' (45) 32
    '.' (46) 22 24
    '/' (47) 33
    ';' (59) 4 5
    '<' (60) 26
    '=' (61) 13 16 17
    '>' (62) 27
    '[' (91) 21 23 41
    ']' (93) 21 23 41
    '^' (94) 25
    '{' (123) 9 43
    '}' (125) 9 43
    error (256)
    NUM (258) 38
    ID (259) 13 14 19 22 24
    LET (260) 8
    STR (261) 39
    IF (262) 6
    ELSE (263)
    WHILE (264)
    FOR (265)
    MAIOR_IGUAL (266) 28
    MENOR_IGUAL (267) 29
    IGUAL (268)
    _IGUAL (269)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    S (34)
        on left: 1
        on right: 0
    CMDs (35)
        on left: 2 3
        on right: 1 2 9
    CMD (36)
        on left: 4 5 6 7
        on right: 2 3 6
    CMD_LET (37)
        on left: 8
        on right: 5
    BLOCO (38)
        on left: 9 10
        on right: 7
    DECLARACOES (39)
        on left: 11 12
        on right: 8 11
    DECLARACAO (40)
        on left: 13 14 15
        on right: 11 12
    ATRIB (41)
        on left: 16 17 18
        on right: 4 16 17
    LVALUE (42)
        on left: 19
        on right: 17 36
    LVALUEPROP (43)
        on left: 20
        on right: 16 37
    ATRIBUTOS (44)
        on left: 21 22 23 24
        on right: 20 21 22
    E (45)
        on left: 25 26 27 28 29 30 31 32 33 34 35
        on right: 6 13 18 21 23 25 26 27 28 29 30 31 32 33 34 42
    F (46)
        on left: 36 37 38 39 40 41 42
        on right: 35
    BLOCOVAZIO (47)
        on left: 43
        on right: 10 40


State 0

    0 $accept: . S $end

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    LET  shift, and go to state 3
    STR  shift, and go to state 4
    IF   shift, and go to state 5
    '('  shift, and go to state 6
    '{'  shift, and go to state 7
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    S           go to state 10
    CMDs        go to state 11
    CMD         go to state 12
    CMD_LET     go to state 13
    BLOCO       go to state 14
    ATRIB       go to state 15
    LVALUE      go to state 16
    LVALUEPROP  go to state 17
    ATRIBUTOS   go to state 18
    E           go to state 19
    F           go to state 20
    BLOCOVAZIO  go to state 21


State 1

   38 F: NUM .

    $default  reduce using rule 38 (F)


State 2

   19 LVALUE: ID .

    $default  reduce using rule 19 (LVALUE)


State 3

    8 CMD_LET: LET . DECLARACOES

    ID  shift, and go to state 22

    $default  reduce using rule 15 (DECLARACAO)

    DECLARACOES  go to state 23
    DECLARACAO   go to state 24


State 4

   39 F: STR .

    $default  reduce using rule 39 (F)


State 5

    6 CMD: IF . '(' E ')' CMD

    '('  shift, and go to state 25


State 6

   42 F: '(' . E ')'

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 29
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 7

    9 BLOCO: '{' . CMDs '}'
   43 BLOCOVAZIO: '{' . '}'

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    LET  shift, and go to state 3
    STR  shift, and go to state 4
    IF   shift, and go to state 5
    '('  shift, and go to state 6
    '{'  shift, and go to state 7
    '}'  shift, and go to state 31
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    CMDs        go to state 32
    CMD         go to state 12
    CMD_LET     go to state 13
    BLOCO       go to state 14
    ATRIB       go to state 15
    LVALUE      go to state 16
    LVALUEPROP  go to state 17
    ATRIBUTOS   go to state 18
    E           go to state 19
    F           go to state 20
    BLOCOVAZIO  go to state 21


State 8

   21 ATRIBUTOS: '[' . E ']' ATRIBUTOS
   23          | '[' . E ']'
   41 F: '[' . ']'

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    ']'  shift, and go to state 33
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 34
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 9

   22 ATRIBUTOS: '.' . ID ATRIBUTOS
   24          | '.' . ID

    ID  shift, and go to state 35


State 10

    0 $accept: S . $end

    $end  shift, and go to state 36


State 11

    1 S: CMDs .

    $default  reduce using rule 1 (S)


State 12

    2 CMDs: CMD . CMDs
    3     | CMD .

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    LET  shift, and go to state 3
    STR  shift, and go to state 4
    IF   shift, and go to state 5
    '('  shift, and go to state 6
    '{'  shift, and go to state 7
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    $default  reduce using rule 3 (CMDs)

    CMDs        go to state 37
    CMD         go to state 12
    CMD_LET     go to state 13
    BLOCO       go to state 14
    ATRIB       go to state 15
    LVALUE      go to state 16
    LVALUEPROP  go to state 17
    ATRIBUTOS   go to state 18
    E           go to state 19
    F           go to state 20
    BLOCOVAZIO  go to state 21


State 13

    5 CMD: CMD_LET . ';'

    ';'  shift, and go to state 38


State 14

    7 CMD: BLOCO .

    $default  reduce using rule 7 (CMD)


State 15

    4 CMD: ATRIB . ';'

    ';'  shift, and go to state 39


State 16

   17 ATRIB: LVALUE . '=' ATRIB
   36 F: LVALUE .

    '='  shift, and go to state 40

    $default  reduce using rule 36 (F)


State 17

   16 ATRIB: LVALUEPROP . '=' ATRIB
   37 F: LVALUEPROP .

    '='  shift, and go to state 41

    $default  reduce using rule 37 (F)


State 18

   20 LVALUEPROP: ATRIBUTOS .

    $default  reduce using rule 20 (LVALUEPROP)


State 19

   18 ATRIB: E .
   25 E: E . '^' E
   26  | E . '<' E
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   29  | E . MENOR_IGUAL E
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E

    MAIOR_IGUAL  shift, and go to state 42
    MENOR_IGUAL  shift, and go to state 43
    '<'          shift, and go to state 44
    '>'          shift, and go to state 45
    '+'          shift, and go to state 46
    '-'          shift, and go to state 47
    '*'          shift, and go to state 48
    '/'          shift, and go to state 49
    '%'          shift, and go to state 50
    '^'          shift, and go to state 51

    $default  reduce using rule 18 (ATRIB)


State 20

   35 E: F .

    $default  reduce using rule 35 (E)


State 21

   10 BLOCO: BLOCOVAZIO .
   40 F: BLOCOVAZIO .

    MAIOR_IGUAL  reduce using rule 40 (F)
    MENOR_IGUAL  reduce using rule 40 (F)
    '<'          reduce using rule 40 (F)
    '>'          reduce using rule 40 (F)
    '+'          reduce using rule 40 (F)
    '-'          reduce using rule 40 (F)
    '*'          reduce using rule 40 (F)
    '/'          reduce using rule 40 (F)
    '%'          reduce using rule 40 (F)
    '^'          reduce using rule 40 (F)
    ';'          reduce using rule 40 (F)
    $default     reduce using rule 10 (BLOCO)


State 22

   13 DECLARACAO: ID . '=' E
   14           | ID .

    '='  shift, and go to state 52

    $default  reduce using rule 14 (DECLARACAO)


State 23

    8 CMD_LET: LET DECLARACOES .

    $default  reduce using rule 8 (CMD_LET)


State 24

   11 DECLARACOES: DECLARACAO . ',' DECLARACOES
   12            | DECLARACAO .

    ','  shift, and go to state 53

    $default  reduce using rule 12 (DECLARACOES)


State 25

    6 CMD: IF '(' . E ')' CMD

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 54
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 26

   43 BLOCOVAZIO: '{' . '}'

    '}'  shift, and go to state 31


State 27

   36 F: LVALUE .

    $default  reduce using rule 36 (F)


State 28

   37 F: LVALUEPROP .

    $default  reduce using rule 37 (F)


State 29

   25 E: E . '^' E
   26  | E . '<' E
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   29  | E . MENOR_IGUAL E
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E
   42 F: '(' E . ')'

    MAIOR_IGUAL  shift, and go to state 42
    MENOR_IGUAL  shift, and go to state 43
    '<'          shift, and go to state 44
    '>'          shift, and go to state 45
    '+'          shift, and go to state 46
    '-'          shift, and go to state 47
    '*'          shift, and go to state 48
    '/'          shift, and go to state 49
    '%'          shift, and go to state 50
    '^'          shift, and go to state 51
    ')'          shift, and go to state 55


State 30

   40 F: BLOCOVAZIO .

    $default  reduce using rule 40 (F)


State 31

   43 BLOCOVAZIO: '{' '}' .

    $default  reduce using rule 43 (BLOCOVAZIO)


State 32

    9 BLOCO: '{' CMDs . '}'

    '}'  shift, and go to state 56


State 33

   41 F: '[' ']' .

    $default  reduce using rule 41 (F)


State 34

   21 ATRIBUTOS: '[' E . ']' ATRIBUTOS
   23          | '[' E . ']'
   25 E: E . '^' E
   26  | E . '<' E
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   29  | E . MENOR_IGUAL E
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E

    MAIOR_IGUAL  shift, and go to state 42
    MENOR_IGUAL  shift, and go to state 43
    '<'          shift, and go to state 44
    '>'          shift, and go to state 45
    '+'          shift, and go to state 46
    '-'          shift, and go to state 47
    '*'          shift, and go to state 48
    '/'          shift, and go to state 49
    '%'          shift, and go to state 50
    '^'          shift, and go to state 51
    ']'          shift, and go to state 57


State 35

   22 ATRIBUTOS: '.' ID . ATRIBUTOS
   24          | '.' ID .

    '['  shift, and go to state 58
    '.'  shift, and go to state 9

    $default  reduce using rule 24 (ATRIBUTOS)

    ATRIBUTOS  go to state 59


State 36

    0 $accept: S $end .

    $default  accept


State 37

    2 CMDs: CMD CMDs .

    $default  reduce using rule 2 (CMDs)


State 38

    5 CMD: CMD_LET ';' .

    $default  reduce using rule 5 (CMD)


State 39

    4 CMD: ATRIB ';' .

    $default  reduce using rule 4 (CMD)


State 40

   17 ATRIB: LVALUE '=' . ATRIB

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    ATRIB       go to state 60
    LVALUE      go to state 16
    LVALUEPROP  go to state 17
    ATRIBUTOS   go to state 18
    E           go to state 19
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 41

   16 ATRIB: LVALUEPROP '=' . ATRIB

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    ATRIB       go to state 61
    LVALUE      go to state 16
    LVALUEPROP  go to state 17
    ATRIBUTOS   go to state 18
    E           go to state 19
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 42

   28 E: E MAIOR_IGUAL . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 62
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 43

   29 E: E MENOR_IGUAL . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 63
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 44

   26 E: E '<' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 64
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 45

   27 E: E '>' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 65
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 46

   31 E: E '+' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 66
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 47

   32 E: E '-' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 67
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 48

   30 E: E '*' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 68
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 49

   33 E: E '/' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 69
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 50

   34 E: E '%' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 70
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 51

   25 E: E '^' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 71
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 52

   13 DECLARACAO: ID '=' . E

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 72
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 53

   11 DECLARACOES: DECLARACAO ',' . DECLARACOES

    ID  shift, and go to state 22

    $default  reduce using rule 15 (DECLARACAO)

    DECLARACOES  go to state 73
    DECLARACAO   go to state 24


State 54

    6 CMD: IF '(' E . ')' CMD
   25 E: E . '^' E
   26  | E . '<' E
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   29  | E . MENOR_IGUAL E
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E

    MAIOR_IGUAL  shift, and go to state 42
    MENOR_IGUAL  shift, and go to state 43
    '<'          shift, and go to state 44
    '>'          shift, and go to state 45
    '+'          shift, and go to state 46
    '-'          shift, and go to state 47
    '*'          shift, and go to state 48
    '/'          shift, and go to state 49
    '%'          shift, and go to state 50
    '^'          shift, and go to state 51
    ')'          shift, and go to state 74


State 55

   42 F: '(' E ')' .

    $default  reduce using rule 42 (F)


State 56

    9 BLOCO: '{' CMDs '}' .

    $default  reduce using rule 9 (BLOCO)


State 57

   21 ATRIBUTOS: '[' E ']' . ATRIBUTOS
   23          | '[' E ']' .

    '['  shift, and go to state 58
    '.'  shift, and go to state 9

    $default  reduce using rule 23 (ATRIBUTOS)

    ATRIBUTOS  go to state 75


State 58

   21 ATRIBUTOS: '[' . E ']' ATRIBUTOS
   23          | '[' . E ']'

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    STR  shift, and go to state 4
    '('  shift, and go to state 6
    '{'  shift, and go to state 26
    '['  shift, and go to state 8
    '.'  shift, and go to state 9

    LVALUE      go to state 27
    LVALUEPROP  go to state 28
    ATRIBUTOS   go to state 18
    E           go to state 34
    F           go to state 20
    BLOCOVAZIO  go to state 30


State 59

   22 ATRIBUTOS: '.' ID ATRIBUTOS .

    $default  reduce using rule 22 (ATRIBUTOS)


State 60

   17 ATRIB: LVALUE '=' ATRIB .

    $default  reduce using rule 17 (ATRIB)


State 61

   16 ATRIB: LVALUEPROP '=' ATRIB .

    $default  reduce using rule 16 (ATRIB)


State 62

   25 E: E . '^' E
   26  | E . '<' E
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   28  | E MAIOR_IGUAL E .
   29  | E . MENOR_IGUAL E
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E

    '+'  shift, and go to state 46
    '-'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '%'  shift, and go to state 50
    '^'  shift, and go to state 51

    MAIOR_IGUAL  error (nonassociative)
    MENOR_IGUAL  error (nonassociative)
    '<'          error (nonassociative)
    '>'          error (nonassociative)

    $default  reduce using rule 28 (E)


State 63

   25 E: E . '^' E
   26  | E . '<' E
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   29  | E . MENOR_IGUAL E
   29  | E MENOR_IGUAL E .
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E

    '+'  shift, and go to state 46
    '-'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '%'  shift, and go to state 50
    '^'  shift, and go to state 51

    MAIOR_IGUAL  error (nonassociative)
    MENOR_IGUAL  error (nonassociative)
    '<'          error (nonassociative)
    '>'          error (nonassociative)

    $default  reduce using rule 29 (E)


State 64

   25 E: E . '^' E
   26  | E . '<' E
   26  | E '<' E .
   27  | E . '>' E
   28  | E . MAIOR_IGUAL E
   29  | E . MENOR_IGUAL E
   30  | E . '*' E
   31  | E . '+' E
   32  | E . '-' E
   33  | E . '/' E
   34  | E . '%' E

    '+'  shift, and go to state 46
    '-'  shift, and go to state 47
    '*'  shift, and go to state 48
    '/'  shift, and go to state 49
    '%'  shift, and go to state 50
    '^'  shift, and go to state 51

    MAIOR_IGUAL  error (nonassociative)
    MENOR_IGUAL  error (nonassociative)
    '<'          error (nonassociative)
    '>'          error (nonassociative)

    $default  reduce using rule 26 (E)


State 65
